# jarvais

./: .gitignore  404.html  CHANGELOG.md  README.md  bruh.py  compose.yaml  example_significant_multiplots.py  index.html  mkdocs.yml  objects.inv  pixi.toml  pixi.toml.bak  pyproject.toml  sh.exe.stackdump
.github/workflows/: build_docs.yml  cd.yml  ci.yml  main.yml  run_notebooks.yml
AutoML/: __init__.py  analyzer.py  explainer.py  trainer.py
AutoML/analysis/: __init__.py  figures.py  janitor.py
AutoML/eval/: __init__.py  explain.py  metrics.py
AutoML/eval/utils/: __init__.py  binary_classifier.py  calculations.py  parameters.py  performance.py
AutoML/features/: engineering.py
AutoML/hparams/: __init__.py  params.py
AutoML/models/: __init__.py  classifier.py  lr.py
AutoML/utils/: functional.py  plot.py
api/analyzer/: index.html
api/explainer/: index.html
api/functional/: index.html
api/pdf/: index.html
api/plot/: index.html
api/trainer/: index.html
cli/jarvais/: index.html
configs/: config.yaml
data/: Head-Neck-PET-CT-clinical copy.csv  MAR_per_OAR_for_patients.csv  RADCURE_Clinical_v04_20241219.csv  RADCURE_processed_clinical.csv
docs/: index.md
docs/api/: analyzer.md  explainer.md  plot.md  trainer.md
docs/assets/: styles.css
docs/get_started/: analyzer.md  explainer.md  trainer.md
docs/tutorials/: classification.ipynb  index.md  radcure_time_to_event.ipynb  regression.ipynb  survival.ipynb
get_started/: index.html
get_started/analyzer/: index.html
get_started/explainer/: index.html
get_started/trainer/: index.html
search/: search_index.json
src/AutoML/: analyzer.py  explainer.py  trainer.py
src/AutoML/analyzer/: _janitor.py  analyzer.py
src/AutoML/explainer/: bias.py  explainer.py
src/AutoML/models/: __init__.py  lr.py  survival.py
src/AutoML/trainer/: _feature_reduction.py  _leaderboard.py  _simple_regression_model.py  _training.py  trainer.py
src/AutoML/utils/: __init__.py  bias.py  functional.py  pdf.py  plot.py
src/analysis/: __init__.py  figures.py  janitor.py  statistics.py
src/eval/: __init__.py  evaluation.py  explain.py
src/features/: __init__.py  engineering.py
src/hparams/models/: regressor.py
src/jarvais/: __init__.py
src/jarvais/analyzer/: _utils.py  analyzer.py  settings.py
src/jarvais/cli/: analyzer.py
src/jarvais/explainer/: __init__.py  _bias.py  bias.py  explainer.py  settings.py  subgroup_analysis.py
tests/: conftest.py  test_analyzer.py  test_explainer.py  test_trainer.py
tests/analyzer/: test_analyzer.py
tests/explainer/: test_explainer.py
tests/trainer/: test_trainer.py  test_trainer_run_pre_split.py
tutorials/: index.html
tutorials/a2r_example/: index.html
tutorials/classification/: index.html
tutorials/notebooks/: Untitled.ipynb  a2r_example.ipynb  classifier.ipynb  cluster.ipynb  example.ipynb  example2.ipynb  radcure_time_to_event.ipynb  regression.ipynb  test.ipynb
tutorials/radcure_time_to_event/: index.html
tutorials/regression/: index.html
tutorials/survival/: index.html
(+202 files in other folders)
